# fileformats-vendor-canfield

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci-cd.yml
extras/: README.md  pyproject.toml
