[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fileformats-vendor-canfield"
description = "Classes for representing different file formats in Python classes for use in type hinting in data workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fileformats >= 0.17"]
license = { file = "LICENSE" }
authors = [{ name = "André Venne", email = "vennand@gmail.com" }]
maintainers = [{ name = "André Venne", email = "vennand@gmail.com" }]
keywords = ["file formats", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "pre-commit", "codespell", "flake8", "flake8-pyproject"]
test = [
    "pytest >=6.2.5",
    "pytest-env>=0.6.2",
    "pytest-cov>=2.12.1",
    "codecov",
    "mypy >=1.5.1",
]

[project.urls]
repository = "https://github.com/ArcanaFramework/fileformats-vendor-canfield"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "fileformats/vendor/canfield/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["fileformats"]

[tool.black]
target-version = ['py310']
exclude = "fileformats/vendor/canfield/_version.py"

[tool.codespell]
ignore-words = ".codespell-ignorewords"

[tool.flake8]
doctests = true
per-file-ignores = ["__init__.py:F401"]
max-line-length = 88
select = "C,E,F,W,B,B950"
extend-ignore = ['E203', 'E501', 'E129']

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true
namespace_packages = true
explicit_package_bases = true
exclude = ["tests", "build", "dist"]
