[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fileformats-vendor-CHANGEME-extras"
description = "Extra methods for accessing and manipulating the underlying data referenced by fileformats-vendor-CHANGEME classes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fileformats >= 0.17",
    "pydra >= 1.0a9"
]
license = {file = "LICENSE"}
authors = [
    {name = "<YOUR-NAME>", email = "<YOUR-EMAIL>"},
]
maintainers = [
    {name = "<YOUR-NAME>", email = "<YOUR-EMAIL>"},
]
keywords = [
    "file formats",
    "data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "codespell",
    "flake8",
    "flake8-pyproject",
]
test = [
    "pytest >=6.2.5",
    "pytest-env>=0.6.2",
    "pytest-cov>=2.12.1",
    "codecov",
]

converters = [
]

[project.urls]
repository = "https://github.com/ArcanaFramework/fileformats-vendor-CHANGEME"

[tool.hatch.version]
source = "vcs"
raw-options = {root = ".."}

[tool.hatch.build.hooks.vcs]
version-file = "fileformats/extras/vendor/CHANGEME/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["fileformats"]

[tool.black]
target-version = ['py310']
exclude = "fileformats/extras/vendor/CHANGEME/_version.py"

[tool.codespell]
ignore-words = ".codespell-ignorewords"

[tool.flake8]
doctests = true
per-file-ignores = [
    "__init__.py:F401"
]
max-line-length = 88
select = "C,E,F,W,B,B950"
extend-ignore = ['E203', 'E501', 'E129']
